--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
     "twig": "^1.17.1"
   }
